@@ -447,6 +447,8 @@ RELEASE 0.93 - Thu, 23 Oct 2003 07:26:55 -0500
   - Handle interrupts better by eliminating all try:-except: blocks
     which caught any and all exceptions, including KeyboardInterrupt.
 
+  - Add a --duplicate= option to control how files are duplicated.
+
 
 
 RELEASE 0.92 - Wed, 20 Aug 2003 03:45:28 -0500
